--- a/boldforester.html
+++ b/boldforester.html
@@ -122,6 +122,22 @@
     <a href="Cocktail-Menu-2025.html">Cocktail Menu</a>
   </div>
 
+<!-- Links to Events & Promotions -->
+  <h2>What’s On</h2>
+  <div class="buttons">
+    <a href="bold-forester-images/Events-Promotions/events.html">View Events</a>
+    <a href="bold-forester-images/Events-Promotions/promotions.html">View Promotions</a>
+  </div>
+
+  <!-- Social Media Section -->
+  <h2>Follow Us</h2>
+  <div class="social-scroll">
+    <a href="https://www.facebook.com/FightingCocksPub/" class="social-card">Facebook</a>
+    <a href="https://www.instagram.com/the_bold_forester/" class="social-card">Instagram</a>
+    <a href="https://www.tiktok.com/@fightingcocks2023" class="social-card">TikTok</a>
+    <a href="https://x.com/cocks_pub" class="social-card">X</a>
+  </div>
+  
   <h2>Extras</h2>
   <div class="buttons">
     <a href="tel:02380867564">📞 Call Us</a>
