--- a/boldforester.html
+++ b/boldforester.html
@@ -98,7 +98,7 @@
 </head>
 <body>
   <header>
-    <img src="The Bold Forester.png" alt="The Bold Forester Logo" class="logo">
+    <img src="The Bold Forester.jpg" alt="The Bold Forester Logo" class="logo">
   </header>
 
   <section>
@@ -113,6 +113,7 @@
     <a href="bold-forester-images/bold-forester-menus/sunday-menu/Sunday-Menu.html">Sunday Menu</a>
     <a href="bold-forester-images/bold-forester-menus/kids-menu/Kids-Menu.html">Kids Menu</a>
     <a href="bold-forester-images/bold-forester-menus/desserts-menu/Desserts-Menu.html">Desserts Menu</a>
+    <a href="bold-forester-images/Christmas/Bold-Christmas.html">Christmas Menus 2025</a>
   </div>
 
   <h2>Drink Menus</h2>
@@ -134,15 +135,16 @@
   <div class="social-scroll">
     <a href="https://www.facebook.com/FightingCocksPub/" class="social-card">Facebook</a>
     <a href="https://www.instagram.com/the_bold_forester/" class="social-card">Instagram</a>
-    <a href="https://www.tiktok.com/@fightingcocks2023" class="social-card">TikTok</a>
-    <a href="https://x.com/cocks_pub" class="social-card">X</a>
+    <a href="https://www.tiktok.com/@theboldforester_" class="social-card">TikTok</a>
+    <a href="https://x.com/ForesterBold" class="social-card">X</a>
+    <a href="https://www.linkedin.com/company/70347145/admin/dashboard/" class="social-card">LinkedIn</a>
   </div>
   
   <h2>Extras</h2>
   <div class="buttons">
-    <a href="tel:02380867564">📞 Call Us</a>
-    <a href="https://www.boldforesterpub.co.uk/food/#_restaurant_form">Book a Table</a>
-    <a href="https://www.boldforesterpub.co.uk/">Official Website</a>
+    <a href="tel:02380175588">📞 Call Us</a>
+    <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form">Book a Table</a>
+    <a href="https://www.theboldforesternewforest.co.uk/">Official Website</a>
     <a href="home.html">⬅ Back to Home</a>
   </div>
 
@@ -150,14 +152,14 @@
     <h3>Opening Times</h3>
     <p><strong>Pub</strong><br>
       Monday – Saturday: 11:00 – 23:00<br>
-      Sunday: 12:00 – 22:30
+      Sunday: 11:00 – 22:30
     </p>
     <p><strong>Food</strong><br>
-      Monday – Saturday: 12:00 – 21:30<br>
-      Sunday: 12:00 – 21:00
+      Monday – Saturday: 11:30 – 21:30<br>
+      Sunday: 11:30 – 21:00
     </p>
     <p>
-      📧 <a href="mailto:info@boldforesterpub.co.uk" class="email-link"><strong>Email us</strong></a>
+      📧 <a href="mailto:info@theboldforesternewforest.co.uk" class="email-link"><strong>Email us</strong></a>
     </p>
   </div>
 
