--- a/Trusty-Servant-images/Events-Promotions/events.html
+++ b/Trusty-Servant-images/Events-Promotions/events.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Bold Forester – Events</title>
+  <title>The Trusty Servant – Events</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -97,23 +97,24 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Italian Week 2025.png" alt="🍝 Italian Week at The Bold Forester – 9th to 15th September">
-        <h3>Italian Week</h3>
+        <img src="Trusty-Jukebox-Friday.png" alt="🎶Jukebox Friday, every Friday from 6pm till 11pm">
+        <h3>Jukebox Friday</h3>
         <p>
-          Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.
+           Jukebox Fridays at The Trusty Servant – Your Music, Your Night! 🍻
         </p>
       </div>
       <div class="card">
-        <img src="National Curry Week 2.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
-        <h3>National Curry Week</h3>
+        <img src="Trusty-quiz-poster.png" alt="🧠 Quiz Night Every other Friday, from 25th April till 26th September 2025">
+        <h3>Quiz Night</h3>
         <p>
-          Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists.
+          Gather your cleverest friends and join us tonight at 8pm for our legendary quiz night!
+          Test your knowledge, enjoy great drinks, and soak up the cosy pub vibes.
         </p>
       </div>
     </div>
   </main>
 
 <div class="buttons">
-  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
+  <a href="../../trustyservant.html">⬅ Back to Pub Page</a>
   <a href="../../home.html">⬅ Back to Home</a>
 </div>
