--- a/home.html
+++ b/home.html
@@ -195,7 +195,7 @@
       <div class="event-card">
         <img src="Local Ales & Fine Wines.png?auto=format&fit=crop&w=800&q=80" alt="Pouring Quality">
         <h3>Pouring Quality</h3>
-        <p>Discover our fine local ales, and our carefully chosen wines, available across all Country Inns pubs.</p>
+        <p>Discover our fine local ales, and our carefully chosen wines, available across all our Country Inns pubs.</p>
       </div>
 
       <!-- New Proudly Local card -->
