--- a/local.html
+++ b/local.html
@@ -154,7 +154,7 @@
         <img src="New Forest Shortbread.png" alt="Shortbread">
         <h3>🍪 Baked with local butter and charm</h3>
         <p>
-          Available to purchase in select Country Inns pubs, these handcrafted treats make the perfect souvenir 
+          Available to purchase in selected Country Inns pubs, these handcrafted treats make the perfect souvenir 
           or snack for the journey home. Lovingly made in the heart of the New Forest, this shortbread reflects 
           the same care and quality we pour into everything we do, simple, traditional, and full of flavour. 
         </p>
