--- a/boldforester.html
+++ b/boldforester.html
@@ -151,9 +151,9 @@
 
   <h2>Drink Menus</h2>
   <div class="buttons">
-    <a href="bold-forester-images/bold-forester-menus/drinks-menu/Drinks-Menu.html">Drinks Menu</a>
+    <a href="bold-forester-images/bold-forester-menus/drinks-menu/updated-drinks-menu-25th-feb.html">Drinks Menu</a>
     <a href="menus/bold-forester-wine.html">Wine List</a>
-    <a href="Cocktail-Menu-2025.html">Cocktail Menu</a>
+    <a href="bold-forester-images/bold-forester-menus/cocktail-menu/Cocktail-Menu-2025.html">Cocktail Menu</a>
   </div>
 
 <!-- Links to Events & Promotions -->
