--- a/boldforester.html
+++ b/boldforester.html
@@ -136,7 +136,8 @@
 
   <section>
     <div class="about">
-      <p>Welcome to The Bold Forester, Marchwood — a traditional country pub at the edge of the New Forest. Explore our menus, book a table, and see what’s on.</p>
+      <p>Welcome to The Bold Forester, Marchwood — a traditional country pub at the edge of the New Forest, Where Great Food, Fine Drinks & Good Company come together.
+A lively and welcoming pub offering exceptional dining, a warm atmosphere & excellent drinks Explore our menus, book a table, and see what’s on.</p>
     </div>
   </section>
 
