--- a/royaloak.html
+++ b/royaloak.html
@@ -139,7 +139,8 @@
 
   <section>
     <div class="about">
-      <p>Welcome to The Royal Oak, Beaulieu — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on.</p>
+      <p>Welcome to The Royal Oak, Beaulieu, timeless charm, modern comfort, true new forest gem nestled in the heart of Beaulieu, this historic country pub 
+blends tradition with contemporary flavours</p>
     </div>
   </section>
 
