--- a/royaloak.html
+++ b/royaloak.html
@@ -139,7 +139,7 @@
 
   <section>
     <div class="about">
-      <p>Welcome to The Royal Oak, Beaulieu, timeless charm, modern comfort, true new forest gem nestled in the heart of Beaulieu, this historic country pub 
+      <p>Welcome to The Royal Oak, Beaulieu, timeless charm, modern comfort, a true new forest gem nestled in the heart of Beaulieu, this historic country pub 
 blends tradition with contemporary flavours</p>
     </div>
   </section>
