--- a/newforestinn.html
+++ b/newforestinn.html
@@ -144,7 +144,8 @@
 
   <section>
     <div class="about">
-      <p>Welcome to The New Forest Inn, Emmery Down — a cosy country pub at the heart of the New Forest. Explore our menus, book a room, reserve a table, and see what’s on</p>
+      <p>Welcome to The New Forest Inn, Emmery Down — A cosy countryside retreat with rustic charm & hearty fare
+A traditional New Forest pub, perfect for relaxed dining, real ales, cosy stay, and a warm welcome</p>
     </div>
   </section>
 
