--- a/lambinn.html
+++ b/lambinn.html
@@ -136,7 +136,8 @@
 
   <section>
     <div class="about">
-      <p>Welcome to The Lamb Inn, Nomansland — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on</p>
+      <p>Welcome to The Lamb Inn, Nomansland — A True taste of the Forest, where history meets hospitality
+steeped in heritage, The Lamb Inn offers hearty food, roaring fires, and a true country pub experience</p>
     </div>
   </section>
 
