--- a/woolpack.html
+++ b/woolpack.html
@@ -136,7 +136,8 @@
 
   <section>
     <div class="about">
-      <p>Welcome to The Woolpack, Sopley — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on.</p>
+      <p>Welcome to The Woolpack, Sopley — A riverside haven for great food, ales & unforgettable moments.
+Set by the Avon river, this classic pub is a perfect spot for delicious dining and a friendly atmosphere.</p>
     </div>
   </section>
 
