--- a/trustyservant.html
+++ b/trustyservant.html
@@ -136,7 +136,8 @@
 
   <section>
     <div class="about">
-      <p>Welcome to The Trusty Servant Inn, Minstead — a cosy country pub at the heart of the New Forest. Explore our menus, book a room, reserve a table, and see what’s on</p>
+      <p>Welcome to The Trusty Servant Inn, Minstead — A historically village pub with heart, character & award-winning food.
+A charming 16th century pub in Minstead, offering a warm welcome, fine ales, and locally inspired dishes</p>
     </div>
   </section>
 
