--- a/fightingcocks.html
+++ b/fightingcocks.html
@@ -136,7 +136,8 @@
 
   <section>
     <div class="about">
-      <p>Welcome to The Fighting Cocks, Fordingbridge — a cosy country pub at the heart of the New Forest. Explore our menus, book a room, reserve a table, and see what’s on</p>
+      <p>Welcome to The Fighting Cocks, Fordingbridge — The spirit of the forest, lively, welcoming & full of flavour.
+A vibrant pub known for its atmosphere, fantastic food, and a great selection of drinks</p>
     </div>
   </section>
 
