--- a/boldforester.html
+++ b/boldforester.html
@@ -136,7 +136,7 @@
 
   <section>
     <div class="about">
-      <p>Welcome to The Bold Forester, Marchwood — a traditional country pub at the edge of the new forest, where great food, fine drinks & good company come together.
+      <p>Welcome to The Bold Forester, Marchwood — A traditional country pub at the edge of the new forest, where great food, fine drinks & good company come together.
         
         A lively and welcoming pub offering exceptional dining, a warm atmosphere & excellent drinks Explore our menus, book a table, and see what’s on.</p>
     </div>
