--- a/woolpack.html
+++ b/woolpack.html
@@ -193,5 +193,5 @@ Set by the Avon river, this classic pub is a perfect spot for delicious dining a
   </div>
 
   <footer>
-    © 2025 Country Inns – The Bold Forester
+    © 2025 Country Inns – The Woolpack
   </footer>
