--- a/boldforester.html
+++ b/boldforester.html
@@ -179,7 +179,7 @@
   <div class="buttons">
     <a href="tel:02380175588">📞 Call Us</a>
     <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form">Book a Table</a>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSckozcIPcgbZOX8rvyeqh8QfqzyPjQdQHpapFvzACa3P2rKTg/viewform?usp=pp_url&entry.122517843=The+Bold+Forester" target="_blank" class="btn">Leave Feedback</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSckozcIPcgbZOX8rvyeqh8QfqzyPjQdQHpapFvzACa3P2rKTg/viewform?usp=pp_url&entry.122517843=The+Bold+Forester" target="_blank">Leave Feedback</a>
     <a href="https://www.theboldforesternewforest.co.uk/">Official Website</a>
     <a href="home.html">⬅ Back to Home</a>
   </div>
