--- a/fightingcocks.html
+++ b/fightingcocks.html
@@ -179,6 +179,7 @@ A vibrant pub known for its atmosphere, fantastic food, and a great selection of
   <a href="tel:01425655686">📞 Call Us</a>
   <a href="https://thefightingcockspub.co.uk/food/#restaurant_form">Book a Table</a>
   <a href="https://web-bookings.hotels.uk.com/#/booking/51730/items/availability?k=XbkHpDevv1inahpI6xTpMVzFxNTE3MzA%3D&r=1757526852990&a=2&c=">Book a Room</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSckozcIPcgbZOX8rvyeqh8QfqzyPjQdQHpapFvzACa3P2rKTg/viewform?usp=pp_url&entry.136569618=The+Fighting+Cocks" target="_blank">Leave Feedback</a>
   <a href="https://thefightingcockspub.co.uk/">Official Website</a>
   <a href="home.html">⬅ Back to Home</a>
 </div>
