--- a/lambinn.html
+++ b/lambinn.html
@@ -176,6 +176,7 @@ steeped in heritage, The Lamb Inn offers hearty food, roaring fires, and a true 
 <div class="buttons">
   <a href="tel:01794331331">📞 Call Us</a>
   <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form">Book a Table</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSckozcIPcgbZOX8rvyeqh8QfqzyPjQdQHpapFvzACa3P2rKTg/viewform?usp=pp_url&entry.136569618=The+Lamb+Inn" target="_blank">Leave Feedback</a>
   <a href="https://www.thelambnomansland.co.uk/">Official Website</a>
   <a href="home.html">⬅ Back to Home</a>
 </div>
