--- a/newforestinn.html
+++ b/newforestinn.html
@@ -187,6 +187,7 @@ A traditional New Forest pub, perfect for relaxed dining, real ales, cosy stay, 
     <a href="tel:02380282377">📞 Call Us</a>
     <a href="https://www.thenewforestinn.co.uk/food/#_restaurant_form">Book a Table</a>
     <a href="https://web-bookings.hotels.uk.com/#/booking/46267/items/availability?k=Pz3vpXoBrwIroy0WsnQ3AMu2JNDYyNjc%3D&r=1757511610247">Book a Room</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSckozcIPcgbZOX8rvyeqh8QfqzyPjQdQHpapFvzACa3P2rKTg/viewform?usp=pp_url&entry.136569618=The+New+Forest+Inn" target="_blank">Leave Feedback</a>
     <a href="https://www.thenewforestinn.co.uk/">Official Website</a>
     <a href="home.html">⬅ Back to Home</a>
   </div>
