--- a/royaloak.html
+++ b/royaloak.html
@@ -177,6 +177,7 @@ blends tradition with contemporary flavours</p>
 <div class="buttons">
   <a href="tel:01590 612228">📞 Call Us</a>
   <a href="https://www.theroyaloakbeaulieu.co.uk/food/#restaurant_form">Book a Table</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSckozcIPcgbZOX8rvyeqh8QfqzyPjQdQHpapFvzACa3P2rKTg/viewform?usp=pp_url&entry.136569618=The+Royal+Oak" target="_blank">Leave Feedback</a>
   <a href="https://www.theroyaloakbeaulieu.co.uk/">Official Website</a>
   <a href="home.html">⬅ Back to Home</a>
 </div>
