--- a/trustyservant.html
+++ b/trustyservant.html
@@ -179,6 +179,7 @@ A charming 16th century pub in Minstead, offering a warm welcome, fine ales, and
   <a href="tel:02380812137">📞 Call Us</a>
   <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form">Book a Table</a>
   <a href="https://web-bookings.hotels.uk.com/#/booking/46270/items/availability?k=8NvS5v6pFtbqgO4xncljzOBc2NDYyNzA%3D&r=1757526495346&a=2&c=">Book a Room</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSckozcIPcgbZOX8rvyeqh8QfqzyPjQdQHpapFvzACa3P2rKTg/viewform?usp=pp_url&entry.136569618=The+Trusty+Servant+Inn" target="_blank">Leave Feedback</a>
   <a href="https://www.thetrustyservant.co.uk/">Official Website</a>
   <a href="home.html">⬅ Back to Home</a>
 </div>
