--- a/woolpack.html
+++ b/woolpack.html
@@ -171,6 +171,7 @@ Set by the Avon river, this classic pub is a perfect spot for delicious dining a
 <div class="buttons">
   <a href="tel:014256722521">📞 Call Us</a>
   <a href="https://www.thewoolpacksopley.co.uk/food/#restaurant_form">Book a Table</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSckozcIPcgbZOX8rvyeqh8QfqzyPjQdQHpapFvzACa3P2rKTg/viewform?usp=pp_url&entry.136569618=The+Woolpack" target="_blank">Leave Feedback</a>
   <a href="https://www.thewoolpacksopley.co.uk/">Official Website</a>
   <a href="home.html">⬅ Back to Home</a>
 </div>
