--- a/bold-forester-images/Events-Promotions/events.html
+++ b/bold-forester-images/Events-Promotions/events.html
@@ -96,34 +96,57 @@
 
   <main>
     <div class="card-grid">
+
+      <!-- National Curry Week -->
       <div class="card">
-        <img src="Italian Week 2025.png" alt="🍝 Italian Week at The Bold Forester – 9th to 15th September">
-        <h3>Italian Week</h3>
-        <p>
-          Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.
-           Book your table now at<br><br>
-          <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-            www.theboldforesternewforest.co.uk
-          </a><br>
-          or call <strong>02380 175588</strong>.
-        </p>
-      </div>
-      <div class="card">
-        <img src="National Curry Week 2.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
+        <img src="National Curry Week.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
         <h3>National Curry Week</h3>
         <p>
           Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists.
-           Book your table now at<br><br>
+          Book your table now at<br><br>
           <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
             www.theboldforesternewforest.co.uk
           </a><br>
           or call <strong>02380 175588</strong>.
         </p>
       </div>
+
+      <!-- Halloween Weekend -->
+      <div class="card">
+        <img src="halloween weekend.png" alt="🎃 Halloween Weekend at The Bold Forester – 31st October to 2nd November">
+        <h3>Halloween Weekend</h3>
+        <p>
+          Join us for a spooky celebration this Halloween Weekend, from 31st October to 2nd November. 
+          Expect themed food & drinks, a hauntingly good atmosphere, and plenty of fun for everyone. 
+          Book your table now at<br><br>
+          <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+            www.theboldforesternewforest.co.uk
+          </a><br>
+          or call <strong>02380 175588</strong>.
+        </p>
+      </div>
+
+      <!-- Tex Mex Week -->
+      <div class="card">
+        <img src="Tex mex week.png" alt="🌮 Tex Mex Week at The Bold Forester – 10th to 17th November">
+        <h3>Tex Mex Week</h3>
+        <p>
+          Get ready for a fiesta of flavours! From 10th to 17th November, join us for Tex Mex Week 
+          at The Bold Forester. Enjoy all your favourites – from nachos to burritos – we’ve got it covered.  
+          Book your table now at<br><br>
+          <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+            www.theboldforesternewforest.co.uk
+          </a><br>
+          or call <strong>02380 175588</strong>.
+        </p>
+      </div>
+
     </div>
   </main>
 
-<div class="buttons">
-  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
-  <a href="../../home.html">⬅ Back to Home</a>
-</div>
+  <div class="buttons">
+    <a href="../../boldforester.html">⬅ Back to Pub Page</a>
+    <a href="../../home.html">⬅ Back to Home</a>
+  </div>
+</body>
+</html>
