--- a/lambinn.html
+++ b/lambinn.html
@@ -143,7 +143,7 @@ steeped in heritage, The Lamb Inn offers hearty food, roaring fires, and a true 
 
   <h2>Food Menus</h2>
   <div class="buttons">
-    <a href="Lamb-Inn-images/Lamb-Inn-Menus/main-menu/">Menu</a>
+    <a href="Lamb-Inn-images/Lamb-Inn-Menus/main-menu/Spring-Summer-Menu-March-2025.html">Menu</a>
     <a href="Lamb-Inn-images/Lamb-Inn-Menus/sunday-menu/Lamb-sunday-menu-dec-2024.html">Sunday Menu</a>
     <a href="Lamb-Inn-images/Lamb-Inn-Menus/kids-menu/Lamb-Kids-Menu.html">Kids Menu</a>
     <a href="Lamb-Inn-images/Lamb-Inn-Menus/desserts-menu/Dessert-menu-March-2024.html">Desserts Menu</a>
