--- a/Woolpack-images/Events-Promotions/promotions.html
+++ b/Woolpack-images/Events-Promotions/promotions.html
@@ -118,10 +118,22 @@
           or call <strong>01425 672252</strong>.
         </p>
       </div>
+      <div class="card">
+        <img src="Fish Friday Woolpack.png" alt="🐟 Fish Fry-Day at The Woolpack – 2 for £30">
+        <h3>Fish Fry-Day</h3>
+        <p>Every Friday at The Woolpack! Enjoy our hot and tasty fish & chips deal – 
+    <strong>2 for just £30</strong>. The perfect way to kick off the weekend.<br><br>
+          Book your table now at<br>
+          <a href="http://www.thewoolpacksopley.co.uk" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+            www.thewoolpacksopley.co.uk
+          </a><br>
+          or call <strong>01425 672252</strong>.
+        </p>
+      </div>
     </div>
   </main>
 
 <div class="buttons">
-  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
+  <a href="../../woolpack.html">⬅ Back to Pub Page</a>
   <a href="../../home.html">⬅ Back to Home</a>
 </div>
