--- a/Trusty-Servant-images/Events-Promotions/events.html
+++ b/Trusty-Servant-images/Events-Promotions/events.html
@@ -101,6 +101,11 @@
         <h3>Jukebox Friday</h3>
         <p>
            Jukebox Fridays at The Trusty Servant – Your Music, Your Night! 🍻
+          Book your table now at<br>
+          <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+           https://www.thetrustyservant.co.uk/
+          </a><br>
+          or call <strong>02380 812137</strong>.
         </p>
       </div>
       <div class="card">
@@ -109,6 +114,11 @@
         <p>
           Gather your cleverest friends and join us tonight at 8pm for our legendary quiz night!
           Test your knowledge, enjoy great drinks, and soak up the cosy pub vibes.
+          Book your table now at<br>
+          <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+            https://www.thetrustyservant.co.uk/
+          </a><br>
+          or call <strong>02380 812137</strong>.
         </p>
       </div>
     </div>
