--- a/home.html
+++ b/home.html
@@ -170,7 +170,7 @@
       <div class="event-card">
         <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="Festive Feast">
         <h3>Festive Feast</h3>
-        <p>Book early (before the 1st of November) in ANY of our Pubs & save £5 per head on our December Festive Feast Menu.</p>
+        <p>Celebrate in style this December with our Festive Feast Menu. Book before 1st November at any of our pubs and receive £5 off per person</p>
          <a href="festivefeast.html" class="btn">Find Out More</a>
       </div>
 
