--- a/home.html
+++ b/home.html
@@ -168,11 +168,11 @@
     <h2>Featured at Every Pub</h2>
     <div class="events-scroll">
       <div class="event-card">
-        <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="Festive Feast">
-        <h3>Festive Feast</h3>
-        <p>Celebrate in style this December with our Festive Feast Menu. Book before 1st November at any of our pubs and receive £5 off per person</p>
-         <a href="festivefeast.html" class="btn">Find Out More</a>
-      </div>
+      <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="Festive Feast">
+      <h3>Festive Feast</h3>
+      <p>Celebrate in style this December with our special Festive Feast Menu. Book early to unlock an exclusive offer!</p>
+    <a href="festivefeast.html" class="btn">Find Out More</a>
+   </div>
 
       <div class="event-card">
         <img src="Seasonal Specials.png?auto=format&fit=crop&w=800&q=80" alt="Seasonal Specials">
