--- a/New-Forest-Inn-images/Events-Promotions/events.html
+++ b/New-Forest-Inn-images/Events-Promotions/events.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Bold Forester – Events</title>
+  <title>The New Forest Inn – Events</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -97,23 +97,24 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Italian Week 2025.png" alt="🍝 Italian Week at The Bold Forester – 9th to 15th September">
-        <h3>Italian Week</h3>
+        <img src="NFI-quiz.jpg"
+        <h3>🧠 Quiz Night at The New Forest Inn</h3>
         <p>
-          Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.
+          Our Quiz Night is returning! Join us for the first one of the season on Friday 26th September! 
+          Guest host with the most Simon Tidby will be joining us as Quiz Master, raising money for The Community Responders a fabulous cause! 
+          Quiz starts at 8pm, £3 per person, max of 6 people per team!<br><br>
+          Book your table now at<br>
+          <a href="https://www.thenewforestinn.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+           https://www.thenewforestinn.co.uk/
+          </a><br>
+          or call <strong>02380 284690</strong>.
         </p>
       </div>
-      <div class="card">
-        <img src="National Curry Week 2.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
-        <h3>National Curry Week</h3>
-        <p>
-          Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists.
-        </p>
-      </div>
+  
     </div>
   </main>
 
 <div class="buttons">
-  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
+  <a href="../../newforestinn.html">⬅ Back to Pub Page</a>
   <a href="../../home.html">⬅ Back to Home</a>
 </div>
