--- a/Fighting-Cocks-images/Events-Promotions/events.html
+++ b/Fighting-Cocks-images/Events-Promotions/events.html
@@ -97,23 +97,17 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Italian Week 2025.png" alt="🍝 Italian Week at The Bold Forester – 9th to 15th September">
-        <h3>Italian Week</h3>
+        <img src="Events coming soon2.jpg" alt="Upcoming Events – Stay Tuned">
+        <h3>Upcoming Events</h3>
         <p>
-          Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.
+          Exciting new events are on the way! Stay tuned for updates and be the first to know what’s coming soon at The Bold Forester.
         </p>
-      </div>
-      <div class="card">
-        <img src="National Curry Week 2.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
-        <h3>National Curry Week</h3>
-        <p>
-          Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists.
-        </p>
-      </div>
     </div>
   </main>
 
-<div class="buttons">
-  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
-  <a href="../../home.html">⬅ Back to Home</a>
-</div>
+  <div class="buttons">
+    <a href="../../fightingcocks.html">⬅ Back to Pub Page</a>
+    <a href="../../home.html">⬅ Back to Home</a>
+  </div>
+</body>
+</html>
