--- a/Fighting-Cocks-images/Events-Promotions/events.html
+++ b/Fighting-Cocks-images/Events-Promotions/events.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Bold Forester – Events</title>
+  <title>The Fighting Cocks – Events</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -100,7 +100,7 @@
         <img src="Events coming soon2.jpg" alt="Upcoming Events – Stay Tuned">
         <h3>Upcoming Events</h3>
         <p>
-          Exciting new events are on the way! Stay tuned for updates and be the first to know what’s coming soon at The Bold Forester.
+          Exciting new events are on the way! Stay tuned for updates and be the first to know what’s coming soon at The Fighting Cocks.
         </p>
     </div>
   </main>
