--- a/Fighting-Cocks-images/Events-Promotions/events.html
+++ b/Fighting-Cocks-images/Events-Promotions/events.html
@@ -100,7 +100,8 @@
         <img src="Events coming soon2.jpg" alt="Upcoming Events – Stay Tuned">
         <h3>Upcoming Events</h3>
         <p>
-          Exciting new events are on the way! Stay tuned for updates and be the first to know what’s coming soon at The Fighting Cocks.
+          Exciting new events are on the way! Stay tuned for updates and be the first to know what’s coming soon at 
+          The Fighting Cocks.
         </p>
     </div>
   </main>
