--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   </p>
   <div class="buttons">
     <button class="btn btn-install" id="installBtn" style="display:none;">📲 Install the App</button>
-    <a href="home.html" class="btn btn-web">🌐 Continue to Web App</a>
+    <a href="home.html" class="btn btn-web">🌐 Continue to App</a>
   </div>
   <div class="mode-toggle" id="modeToggle">Switch to Dark/Light Mode</div>
 </div>
