--- a/woolpack.html
+++ b/woolpack.html
@@ -145,12 +145,13 @@ Set by the Avon river, this classic pub is a perfect spot for delicious dining a
   <div class="buttons">
     <a href="Woolpack-images/Woolpack-Menus/main-menu/summer-menu-2025.html">Menu</a>
     <a href="Woolpack-images/Woolpack-Menus/sunday-menu/Summer-sunday-menu-2025(3).html">Sunday Menu</a>
-    <a href="Woolpack-images/Woolpack-Menus/2 Course-menu/Summer-2-course.html">2 Course Menu</a>
+    <a href="Woolpack-images/Woolpack-Menus/2 Course-menu/Woolpack 2 Course Menu.html">2 Course Menu</a>
     <a href="Woolpack-images/Christmas/Woolpack-Christmas.html">Christmas Menus 2025</a>
   </div>
 
   <h2>Drink Menus</h2>
   <div class="buttons">
+    <a href="menus/lambinn-wine.html">Wine List</a>
     <a href="menus/lambinn-wine.html">Wine List</a>
   </div>
 
