--- a/woolpack.html
+++ b/woolpack.html
@@ -152,7 +152,7 @@ Set by the Avon river, this classic pub is a perfect spot for delicious dining a
   <h2>Drink Menus</h2>
   <div class="buttons">
     <a href="menus/lambinn-wine.html">Wine List</a>
-    <a href="menus/lambinn-wine.html">Wine List</a>
+    <a href="Woolpack-images/Woolpack-Menus/Hot-Drinks-Menu/Woolpack Hot Drinks.html">Hot Drinks</a>
   </div>
 
   <h2>What’s On</h2>
