--- a/Royal-Oak-images/Events-Promotions/events.html
+++ b/Royal-Oak-images/Events-Promotions/events.html
@@ -97,10 +97,11 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Italian-Week.png" alt="🍝 Italian Week at The Royal Oak – 15th to 21st September">
+        <img src="Quiz-time.png" alt="🧠 Quiz Night at The Royal Oak ">
         <h3>Italian Week</h3>
         <p>
-          Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.<br><br>
+           Test your knowledge and join the fun! Gather your team of up to six, enjoy great food & drinks, and compete for bragging rights in a lively and relaxed pub atmosphere.
+          All proceeds go to support the New Forest Trust<br><br>
           Book your table now at<br>
           <a href="https://www.theroyaloakbeaulieu.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
            https://www.theroyaloakbeaulieu.co.uk/
@@ -113,6 +114,6 @@
   </main>
 
 <div class="buttons">
-  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
+  <a href="../../royaloak.html">⬅ Back to Pub Page</a>
   <a href="../../home.html">⬅ Back to Home</a>
 </div>
