--- a/Royal-Oak-images/Events-Promotions/events.html
+++ b/Royal-Oak-images/Events-Promotions/events.html
@@ -98,7 +98,7 @@
     <div class="card-grid">
       <div class="card">
         <img src="Quiz-time.png" alt="🧠 Quiz Night at The Royal Oak ">
-        <h3>Italian Week</h3>
+        <h3>Quiz Night</h3>
         <p>
            Test your knowledge and join the fun! Gather your team of up to six, enjoy great food & drinks, and compete for bragging rights in a lively and relaxed pub atmosphere.
           All proceeds go to support the New Forest Trust<br><br>
