--- a/trustyservant.html
+++ b/trustyservant.html
@@ -154,7 +154,7 @@ A charming 16th century pub in Minstead, offering a warm welcome, fine ales, and
   <h2>Drink Menus</h2>
   <div class="buttons">
     <a href="bold-forester-images/bold-forester-menus/drinks-menu/updated-drinks-menu-feb.html">Drinks Menu</a>
-    <a href="menus/lambinn-wine.html">Wine List</a>
+    <a href="bold-forester-images/bold-forester-menus/wine-list/wine list-Apr24.html">Wine List</a>
     <a href="Cocktail-Menu-2025.html">Cocktail Menu</a>
   </div>
 
