--- a/newforestinn.html
+++ b/newforestinn.html
@@ -162,7 +162,7 @@ A traditional New Forest pub, perfect for relaxed dining, real ales, cosy stay, 
   <h2>Drink Menus</h2>
   <div class="buttons">
     <a href="bold-forester-images/bold-forester-menus/drinks-menu/updated-drinks-menu-feb.html">Drinks Menu</a>
-    <a href="menus/lambinn-wine.html">Wine List</a>
+    <a href="bold-forester-images/bold-forester-menus/wine-list/wine list-Apr24.html">Wine List</a>
     <a href="Cocktail-Menu-2025.html">Cocktail Menu</a>
   </div>
 
