--- a/lambinn.html
+++ b/lambinn.html
@@ -153,7 +153,7 @@ steeped in heritage, The Lamb Inn offers hearty food, roaring fires, and a true 
   <h2>Drink Menus</h2>
   <div class="buttons">
     <a href="bold-forester-images/bold-forester-menus/drinks-menu/updated-drinks.html">Drinks Menu</a>
-    <a href="menus/lambinn-wine.html">Wine List</a>
+    <a href="bold-forester-images/bold-forester-menus/wine-list/wine list-Apr24.html">Wine List</a>
     <a href="bold-forester-images/bold-forester-menus/cocktail-menu/Cocktail-Menu.html">Cocktail Menu</a>
   </div>
 
