--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -97,10 +97,10 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Quiz Sept The Lamb.jpg"
-        <h3>🧠 Quiz Night at The Lamb Inn</h3>
-        <p>
-          Test your knowledge and join the fun! Gather your team of up to six, enjoy great food & drinks, and compete for bragging rights in a lively and relaxed pub atmosphere.<br><br>
+        <img src="Curry-Week-Social.png"
+        <h3>🍛 National Curry Week</h3>
+       <p><strong>6th–12th October</strong></p>
+        <p>Join us at The Lamb Inn, Nomansland, to celebrate National Curry Week with delicious homemade curries throughout the week.</p><br><br>
           Book your table now at<br>
           <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
            https://www.thelambnomansland.co.uk/
