--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -100,7 +100,7 @@
         <img src="Curry-Week-Social.png"
         <h3>🍛 National Curry Week</h3>
        <p><strong>6th–12th October</strong></p>
-        <p>Join us at The Lamb Inn, Nomansland, to celebrate National Curry Week with delicious homemade curries throughout the week.</p><br><br>
+        <p>Join us at The Lamb Inn, Nomansland, to celebrate National Curry Week with delicious homemade curries throughout the week.<br><br>
           Book your table now at<br>
           <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
            https://www.thelambnomansland.co.uk/
