--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -108,6 +108,19 @@
           or call <strong>01794 331331</strong>.
         </p>
       </div>
+      <div class="card">
+        <img src="Family Game Night Lamb.jpg" alt="Family Game Night at The Lamb Inn">
+        <h3>🎲 Family Game Night</h3>
+        <p><strong>10th October from 6PM</strong></p>
+        <p>Come out for a fun-filled <strong>Family Game Night</strong> at The Lamb Inn, Nomansland. 
+           Meet new friends, enjoy classic games, and share in the laughter!<br><br>
+          Book your table now at<br>
+     <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+       https://www.thelambnomansland.co.uk/
+     </a><br>
+     or call <strong>01794 331331</strong>.
+  </p>
+      </div>
     </div>
   </main>
 
