--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -121,6 +121,19 @@
      or call <strong>01794 331331</strong>.
   </p>
       </div>
+      <div class="card">
+        <img src="Live band Music Lamb.jpg" alt="Live Music at The Lamb Inn">
+        <h3>🎶 Live Music </h3>
+        <p><strong>24th October from 7PM</strong></p>
+        <p>Come out and enjoy a fantastic night of <strong>Live Music</strong> at The Lamb Inn, Nomansland. 
+           Great tunes, great company, and a night to remember!<br><br>
+          Book your table now at<br>
+     <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+       https://www.thelambnomansland.co.uk/
+     </a><br>
+     or call <strong>01794 331331</strong>.
+  </p>
+      </div>
     </div>
   </main>
 
