--- a/lambinn.html
+++ b/lambinn.html
@@ -154,7 +154,7 @@ steeped in heritage, The Lamb Inn offers hearty food, roaring fires, and a true 
   <div class="buttons">
     <a href="Lamb-Inn-images/Lamb-Inn-Menus/drinks-menu/Drinks Menu.html">Drinks Menu</a>
     <a href="bold-forester-images/bold-forester-menus/wine-list/wine list-Apr24.html">Wine List</a>
-    <a href="Lamb-Inn-images/Lamb-Inn-Menus/cocktail-menu/">Cocktail Menu</a>
+    <a href="Lamb-Inn-images/Lamb-Inn-Menus/cocktail-menu/Cocktail Menu.html">Cocktail Menu</a>
   </div>
 
   <!-- Links to Events & Promotions -->
