--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -109,7 +109,7 @@
         </p>
       </div>
       <div class="card">
-        <img src="Family Game Night Lamb.jpg" alt="Family Game Night at The Lamb Inn">
+        <img src="Family Game Night Lamb.png" alt="Family Game Night at The Lamb Inn">
         <h3>🎲 Family Game Night</h3>
         <p><strong>10th October from 6PM</strong></p>
         <p>Come out for a fun-filled <strong>Family Game Night</strong> at The Lamb Inn, Nomansland. 
