--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -122,7 +122,7 @@
   </p>
       </div>
       <div class="card">
-        <img src="Live band Music Lamb.jpg" alt="Live Music at The Lamb Inn">
+        <img src="Live band Music Lamb.png" alt="Live Music at The Lamb Inn">
         <h3>🎶 Live Music </h3>
         <p><strong>24th October from 7PM</strong></p>
         <p>Come out and enjoy a fantastic night of <strong>Live Music</strong> at The Lamb Inn, Nomansland. 
