--- a/Trusty-Servant-images/Events-Promotions/events.html
+++ b/Trusty-Servant-images/Events-Promotions/events.html
@@ -109,11 +109,10 @@
         </p>
       </div>
       <div class="card">
-        <img src="Trusty-quiz-poster.png" alt="🧠 Quiz Night Every other Friday, from 25th April till 26th September 2025">
-        <h3>Quiz Night</h3>
+        <img src="Trusty Underdogs Band.jpg" alt="🎶 Underdogs Band 28th of November 2025">
+        <h3>Live Music</h3>
         <p>
-          Gather your cleverest friends and join us tonight at 8pm for our legendary quiz night!
-          Test your knowledge, enjoy great drinks, and soak up the cosy pub vibes.
+          Gather your friends and join us tonight at 8pm to hear the amazing The Underdogs!
           Book your table now at<br>
           <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
             https://www.thetrustyservant.co.uk/
