--- a/Trusty-Servant-images/Events-Promotions/events.html
+++ b/Trusty-Servant-images/Events-Promotions/events.html
@@ -112,7 +112,7 @@
         <img src="Trusty Underdogs Band.jpg" alt="🎶 Underdogs Band 28th of November 2025">
         <h3>Live Music</h3>
         <p>
-          Gather your friends and join us tonight at 8pm to hear the amazing The Underdogs!
+          Gather your friends and join us on the 28th of November at 8pm to hear the amazing The Underdogs!
           Book your table now at<br>
           <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
             https://www.thetrustyservant.co.uk/
